2002-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * magick/xwindow.c: Optimize loading of TrueColor images with
    gamma = 1.0.

2002-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * coders/wmf.c: Added logging facilities.

2002-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * display.c: removed unnecessary SignatureImage() calls which
    dramatically slowed down loading images and quiting the program.
  * xwindow.c: optimized image size reduction for the case where the
    target size is a small fraction of the original size. This makes
    creation of display's panner and thumbnail images tremendously faster,
    with no noticeable degradation of thumbnail quality.

2002-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added Windows95 define to VisualMagick magick_config.h to
    disable use of features not available under Windows '95

2002-10-21  Cristy  <cristy@mystic.es.dupont.com>
  * Added large file pixel cache support for Windows NT.

2002-10-21  Leonard Rosenthol <leonardr@lazerware.com>
  * PDF coder no longer uses ASCII85 encoding with TIFF for MUCH smaller
    files!
  * Cleaned up a few other things in PDF coder.

2002-10-19  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Updated to Automake 1.7.1.

2002-10-18  Cristy  <cristy@mystic.es.dupont.com>
  * PingBlob() improperly set the length memory of BlobInfo to zero.
  * Fixed Ping() memory leak in PerlMagick.
  * Fixed -map problem in convert/mogrify utilities.
  * Fixed -remote problem with display utility (returns correct error
    status).

2002-10-16  Cristy  <cristy@mystic.es.dupont.com>
  * -border with a single value now produces correct results
    (e.g. -border 10).
  * Added -lat to convert/mogrify (local adaptive thresholding).

2002-10-15  Cristy  <cristy@mystic.es.dupont.com>
  * Set locale type LC_NUMERIC to "C".
  * Bug fix for PS2 encoder.
  * Added PS-Adobe preamble to PS3 encoder.

2002-10-14  Cristy  <cristy@mystic.es.dupont.com>